[package]
name = "qwen_context_cooccur_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
num_cpus = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
walkdir = "2"
